--- a/inst/lessons/git_setupX.qmd
+++ b/inst/lessons/git_setupX.qmd
@@ -2,18 +2,18 @@
 title: Git and GitHub Setup
 ---
 
-BLARGH
-
 :::{.callout-tip}
 ## Learning objectives
 
 -   Set global options in your `.gitconfig` file
--   Practice how to set up GitHub Authentication using a Personal Access Token (PAT)
+-   Practice how t o set up GitHub Authentication using a Personal Access Token (PAT)
 :::
 
 ## Set up global options in Git
 
 Before using Git, you need to tell it who you are, also known as setting the **global options**. You can do this either on the terminal using git command or in the console using the R package `usethis`. For this lesson we will use the `usethis` package. However, you can also find the git commands to reference in the future.
+
+test
 
 
 ::: {.callout-note}
@@ -141,9 +141,10 @@ When you add your username and email to the global options you **must** use the 
 
 Previously, the default branch name was `master` and this terminology for Git branches invokes  motivates us to update our default branch to `main` instead. 
 
+test2
+
 :::
 
-UGHHHH
 
 #### Set a long timeout for the git cache{.unnumbered}
 
@@ -168,6 +169,7 @@ git config --global credential.helper 'cache --timeout=10000000'
 
 
 
+## GitHub Authentication
 
 GitHub recently deprecated password authentication for accessing repositories, so we need to set up a secure way to authenticate. 
 
@@ -179,7 +181,7 @@ We will be using a **Personal Access Token (PAT)** in this course. For better se
 ## Setting up your PAT
 
 1.  Run `usethis::create_github_token()` in the Console.
-2.  A new  window should open up to GitHub, showing all the scopes options. You can review the scopes, but you don't need to worry about which ones to select this time. The previous function automatically pre-selects some recommended scopes. **Go ahead and scroll to the bottom and click "Generate Token"**.
+2.  A new browser window should open up to GitHub, showing all the scopes options. You can review the scopes, but you don't need to worry about which ones to select this time. The previous function automatically pre-selects some recommended scopes. **Go ahead and scroll to the bottom and click "Generate Token"**.
 3.  Copy the generated token.
 4.  Back in RStudio, run `gitcreds::gitcreds_set()` in the Console.
 5.  Paste your PAT when the prompt asks for it.
