--- a/inst/lessons/r_rstudio_server_setup.qmd
+++ b/inst/lessons/r_rstudio_server_setup.qmd
@@ -7,15 +7,7 @@ title: RStudio Server Setup
 
 - Practice creating an R Project
 - Organize an R Project for effective project management
-- Understand how to move in an R Project using paths and working directories
-:::
-
-## Logon to the RStudio Server
-
-To prevent us from spending most of this lesson troubleshooting the myriad of issues that can arise when setting up the R, RStudio, and git environments, we have chosen to have everyone work on a remote server with all of the software you need installed. We will be using a special kind of RStudio just for servers called RStudio Server. If you have never worked on a remote server before, you can think of it like working on a different computer via the internet. Note that the server has no knowledge of the files on your local filesystem, but it is easy to transfer files from the server to your local computer, and vice-versa, using the RStudio server interface.
-
-::: {.callout-tip}
-## Server Setup
+- Understand how to move in 
 You should have received an email prompting you to change your password for your server account. If you did not, please put up a post-it and someone will help you.
 
 After you have successfully changed your password log in at: [https://included-crab.nceas.ucsb.edu/](https://included-crab.nceas.ucsb.edu/)
